--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
             </div>
           </section>  
     </section>
+    <footer>
+        <div class="foot">
+            <nav class="buttons">
+                <a class="b" href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </footer>
     
 </body>
 </html>
