"made a basic about page because its getting late"

--- a/about.html
+++ b/about.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel='stylesheet' href="about.css">
 </head>
 <body>
-    <h1> ABOUT </h1>
+    <header>
+        <div class="headerbox">
+            <div class="bigname">
+                <h1>Cory Scofield</h1>
+            </div>
+                <nav class="buttons">
+                    <a class="b" href="index.html">Home</a>
+                    <a class="b" href="about.html">About</a>
+                    <a class= "b" href="projects.html">Projects</a>
+                    <a class="b" href="contact.html">Contact</a>
+                </nav>
+            
+            
+        </div>
+    </header>
+    <h1 class="about"> About </h1>
+    <div class="img">
+        <img src="https://picsum.photos/200" alt="decorative picture">
+    </div>
+    <div class="par">
+        <p>His change with native charms yea nor, whateer minstrels with not there are maidens, in revellers rhyme land day. Festal nor so had the in and her brow. To did he by by scarce. Whateer he it himnot other one by youth brow, once condemned by so passed not but. Made heart scape venerable spoiled bidding, other vexed bower wrong.</p>
+    </div>
 </body>
 </html>
