--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="projects.css">
 </head>
 <body>
-    <h1> PROJECTS </h1>
+    <header>
+        <div class="headerbox">
+            <div class="bigname">
+                <h1>Cory Scofield</h1>
+            </div>
+                <nav class="buttons">
+                    <a class="b" href="index.html">Home</a>
+                    <a class="b" href="about.html">About</a>
+                    <a class= "b" href="projects.html">Projects</a>
+                    <a class="b" href="contact.html">Contact</a>
+                </nav>
+            
+            
+        </div>
+    </header>
+    <h1 class="project"> PROJECTS </h1>
+    <section class="multiplechoice">
+        <div class="image">
+            <div class="text">
+              <a href="#" target="blank">Learn More</a>
+            </div>
+        </div>
+          <div class="image">
+            <div class="text">
+              <a href="#" target="_blank">Learn More</a>
+            </div>
+        </div>
+        </div>
+          <div class="image">
+            <div class="text">
+              <a href="#" target="_blank">Learn More</a>
+            </div>
+        </div>
+        <div class="image">
+            <div class="text">
+              <a href="#" target="blank">Learn More</a>
+            </div>
+        </div>
+          <div class="image">
+            <div class="text">
+              <a href="#" target="_blank">Learn More</a>
+            </div>
+        </div>
+        </div>
+          <div class="image">
+            <div class="text">
+              <a href="#" target="_blank">Learn More</a>
+            </div>
+        </div>
+      </section>  
+</section>
 </body>
 </html>
