--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <h1> CONTACT </h1>
+    <header>
+        <div class="headerbox">
+            <div class="bigname">
+                <h1>Cory Scofield</h1>
+            </div>
+                <nav class="buttons">
+                    <a class="b" href="index.html">Home</a>
+                    <a class="b" href="about.html">About</a>
+                    <a class= "b" href="projects.html">Projects</a>
+                    <a class="b" href="contact.html">Contact</a>
+                </nav>
+            
+            
+        </div>
+    </header>
+    <section class="box">
+        <div class="contact">
+            <h1> CONTACT </h1>
+            <p>Et ea amet ea est no ipsum sit sanctus diam, ipsum est aliquyam sed dolor justo et. Est lorem voluptua.</p>
+        </div>
+    </section>
 </body>
 </html>
